--- a/child_pages/cc_elections.html
+++ b/child_pages/cc_elections.html
@@ -21,5 +21,12 @@
     </nav>
 
     <div id="jumbotronjawn"></div>
+
+    <div class="container">
+        <h2 class="container-title">Cumberland County Elections</h2>
+        <div class="container-subh">Top issues this election cycle and the candidates running</div>
+        <a href="/child_pages/cc-elections/cc_election_candidates.html">Review the Candidates</a>
+        <a href="/child_pages/cc-elections/cc_election_issues.html">Review the Issues</a>
+    </div>
 </body>
 </html>
