--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
     </nav>
 
     <div id="jumbotronjawn"></div>
+    <div class="container">
+        <h2 class="container-title">Inform The Vote</h2>
+        <div class="container-subh">
+            <p>Clear, up to date information on candidates running for election relevant to Cumberland County NJ citizens and where they stand on the issues at hand.</a>
+            <p>All information gathered by independent citizens of Cumberland County.</p>
+        </div>
+    </div>
 </body>
 </html>
