--- a/child_pages/cc-elections/cc_election_candidates.html
+++ b/child_pages/cc-elections/cc_election_candidates.html
@@ -87,15 +87,335 @@
 
                 </div>
                 <div class="b"></div>
-                <div class="personal-choice"></div>
+                <div class="personal-choice">
+                    <div class='pc-col-1'>
+                        <p class="pc-line-1">Personal Choice</p>
+                        <p class="pc-line-2">Seleccion Personal</p>
+                    </div>
+                    <div class="pc-col-2">0</div>
+                </div>
             </div>
-            <div class="gen-assembly"></div>
+            <div class="gen-assembly row">
+                <div class="no-bottom office-title">
+                    <div class="mem-gen-assem1">
+                        <p>Members of the</p>
+                        <p>General Assembly</p>
+                        <p>Vote for Two</p>
+                    </div>
+                </div>
+                <div class="a">
+                    <div class="a-row-1">
+                        <div class="org">
+                            <p>Cumberland County</p> 
+                            <p>Regular Democratic</p> 
+                            <p>Organization</p>
+                        </div>
+                        <div class="first-name">
+                            <a href="/child_pages/cc-elections/Candidates/white-morris.html">Damita</a>
+                        </div>
+                        <div class="number-a-and-circle"> 
+                            <p>2A</p>
+                            <p>0</p>
+                        </div>   
+                    </div>
+                    <div class="a-row-2">
+                        <div class="last-name">
+                            <a class="long-name" href="/child_pages/cc-elections/Candidates/white-morris.html">WHITE-MORRIS</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="b"></div>
+                <div class="personal-choice">
+                    <div class='pc-col-1'>
+                        <p class="pc-line-1">Personal Choice</p> 
+                        <p class="pc-line-2">Seleccion Personal</p>
+                    </div>
+                    <div class="pc-col-2">0</div>
+                </div>
+                <div class="no-top office-title">
+                    <div class="mem-gen-assem2">
+                        <p>Miembros de la</p>
+                        <p>Asamblea General</p>
+                        <p>Vote por Dos</p>
+                    </div>
+                </div>
+                <div class="a">
+                    <div class="a-row-1">
+                        <div class="org">
+                            <p>Cumberland County</p> 
+                            <p>Regular Democratic</p> 
+                            <p>Organization</p>
+                        </div>
+                        <div class="first-name">
+                            <a href="/child_pages/cc-elections/Candidates/bonner.html">Eddie L.</a>
+                        </div>
+                        <div class="number-a-and-circle"> 
+                            <p>3A</p>
+                            <p>0</p>
+                        </div>   
+                    </div>
+                    <div class="a-row-2">
+                        <div class="last-name">
+                            <a href="/child_pages/cc-elections/Candidates/bonner.html">BONNER</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="b"></div>
+                <div class="personal-choice">
+                    <div class='pc-col-1'>
+                        <p class="pc-line-1">Personal Choice</p>
+                        <p class="pc-line-2">Seleccion Personal</p>
+                    </div>
+                    <div class="pc-col-2">0</div>
+                </div>
+            </div>
             <div class="spacer"></div>
-            <div class="sheriff"></div>
-            <div class="surrogate"></div>
-            <div class="county-commissioners"></div>
+            <div class="sheriff row">
+                <div class="office-title">
+                    <div class="ot-english">
+                        <p>Sheriff</p>
+                        <p>Vote for One</p>
+                    </div>
+                    <div class="ot-espanol">
+                        <p>Alguacil</p>
+                        <p>Vote por Uno</p>
+                    </div>
+                </div>
+                <div class="a">
+                    <div class="a-row-1">
+                        <div class="org">
+                            <p>Cumberland County</p> 
+                            <p>Regular Democratic</p> 
+                            <p>Organization</p>
+                        </div>
+                        <div class="first-name">
+                            <a href="/child_pages/cc-elections/Candidates/austino.html">Robert A.</a>
+                        </div>
+                        <div class="number-a-and-circle"> 
+                            <p>4A</p>
+                            <p>0</p>
+                        </div>   
+                    </div>
+                    <div class="a-row-2">
+                        <div class="last-name">
+                            <a href="/child_pages/cc-elections/Candidates/austino.html">AUSTINO</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="b"></div>
+                <div class="personal-choice">
+                    <div class='pc-col-1'>
+                        <p class="pc-line-1">Personal Choice</p>
+                        <p class="pc-line-2">Seleccion Personal</p>
+                    </div>
+                    <div class="pc-col-2">0</div>
+                </div>
+            </div>
+            <div class="surrogate row">
+                <div class="office-title">
+                    <div class="ot-english">
+                        <p>Surrogate</p>
+                        <p>Vote for One</p>
+                    </div>
+                    <div class="ot-espanol">
+                        <p>Juez del Tribunal Testamentario</p>
+                        <p>Vote por Uno</p>
+                    </div>
+                </div>
+                <div class="a">
+                    <div class="a-row-1">
+                        <div class="org">
+                            <p>Cumberland County</p> 
+                            <p>Regular Democratic</p> 
+                            <p>Organization</p>
+                        </div>
+                        <div class="first-name">
+                            <a href="/child_pages/cc-elections/Candidates/acevedo.html">Nicasio</a>
+                        </div>
+                        <div class="number-a-and-circle"> 
+                            <p>5A</p>
+                            <p>0</p>
+                        </div>   
+                    </div>
+                    <div class="a-row-2">
+                        <div class="last-name">
+                            <a href="/child_pages/cc-elections/Candidates/acevedo.html">ACEVEDO</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="b"></div>
+                <div class="personal-choice">
+                    <div class='pc-col-1'>
+                        <p class="pc-line-1">Personal Choice</p>
+                        <p class="pc-line-2">Seleccion Personal</p>
+                    </div>
+                    <div class="pc-col-2">0</div>
+                </div>
+            </div>
+            <div class="county-commissioners row">
+                <div class="no-bottom office-title">
+                    <div class="shift-down ot-english">
+                        <p>Board of County</p>
+                        <p class="bold">Commissioners</p>
+                        <p>Vote for Three</p>
+                    </div>
+                    <div class="ot-espanol">
+                    </div>
+                </div>
+                <div class="a">
+                    <div class="a-row-1">
+                        <div class="org">
+                            <p>Cumberland County</p> 
+                            <p>Regular Democratic</p> 
+                            <p>Organization</p>
+                        </div>
+                        <div class="first-name">
+                            <a href="/child_pages/cc-elections/Candidates/capizola.html">John P.</a>
+                        </div>
+                        <div class="number-a-and-circle"> 
+                            <p>6A</p>
+                            <p>0</p>
+                        </div>   
+                    </div>
+                    <div class="a-row-2">
+                        <div class="last-name">
+                            <a class="long-name" id="capizola" href="/child_pages/cc-elections/Candidates/capizola.html">CAPIZOLA, Jr.</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="b"></div>
+                <div class="personal-choice">
+                    <div class='pc-col-1'>
+                        <p class="pc-line-1">Personal Choice</p>
+                        <p class="pc-line-2">Seleccion Personal</p>
+                    </div>
+                    <div class="pc-col-2">0</div>
+                </div>
+                <div class="no-bottom office-title">
+                    <div class="ot-english">
+    
+                    </div>
+                    <div class="ot-espanol">
+
+                    </div>
+                </div>
+                <div class="a">
+                    <div class="a-row-1">
+                        <div class="org">
+                            <p>Cumberland County</p> 
+                            <p>Regular Democratic</p> 
+                            <p>Organization</p>
+                        </div>
+                        <div class="first-name">
+                            <a href="/child_pages/cc-elections/Candidates/smith.html">La Rae</a>
+                        </div>
+                        <div class="number-a-and-circle"> 
+                            <p>7A</p>
+                            <p>0</p>
+                        </div>   
+                    </div>
+                    <div class="a-row-2">
+                        <div id="smith" class="last-name">
+                            <a href="/child_pages/cc-elections/Candidates/smith.html">Smith</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="b"></div>
+                <div class="personal-choice">
+                    <div class='pc-col-1'>
+                        <p class="pc-line-1">Personal Choice</p>
+                        <p class="pc-line-2">Seleccion Personal</p>
+                    </div>
+                    <div class="pc-col-2">0</div>
+                </div>
+                <div class="no-top office-title">
+                    <div class="shift-up ot-espanol">
+                        <p>Junta Comisionados</p>
+                        <p class="bold">del Condado</p>
+                        <p>Vote for Three</p>
+                    </div>
+                </div>
+                <div class="a">
+                    <div class="a-row-1">
+                        <div class="org">
+                            <p>Cumberland County</p> 
+                            <p>Regular Democratic</p> 
+                            <p>Organization</p>
+                        </div>
+                        <div class="first-name">
+                            <a id="joseph" href="/child_pages/cc-elections/Candidates/perella.html">Joseph "Joeigh" S.</a>
+                        </div>
+                        <div class="number-a-and-circle"> 
+                            <p>8A</p>
+                            <p>0</p>
+                        </div>   
+                    </div>
+                    <div class="a-row-2">
+                        <div class="last-name">
+                            <a href="/child_pages/cc-elections/Candidates/perella.html">PERELLA, Jr.</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="b"></div>
+                <div class="personal-choice">
+                    <div class='pc-col-1'>
+                        <p class="pc-line-1">Personal Choice</p>
+                        <p class="pc-line-2">Seleccion Personal</p>
+                    </div>
+                    <div class="pc-col-2">0</div>
+                </div>
+            </div>
             <div class="spacer"></div>
-            <div class="county-committee"></div>
+            <div class="county-committee row">
+                <div class="office-title">
+                    <div class="ot-english">
+                        <p>State Sentator</p>
+                        <p>Vote for One</p>
+                    </div>
+                    <div class="ot-espanol">
+                        <p>Senador Estatal</p>
+                        <p>Vote por Uno</p>
+                    </div>
+                </div>
+                <div class="a">
+                    <div class="a-row-1">
+                        <div class="org">
+                            <p>Cumberland County</p> 
+                            <p>Regular Democratic</p> 
+                            <p>Organization</p>
+                        </div>
+                        <div class="first-name">
+                            <a id="joseph" href="/child_pages/cc-elections/Candidates/perella.html">Joseph "Joeigh" S.</a>
+                        </div>
+                        <div class="number-a-and-circle"> 
+                            <p>8A</p>
+                            <p>0</p>
+                        </div>   
+                    </div>
+                    <div class="a-row-2">
+                        <div class="last-name">
+                            <a href="/child_pages/cc-elections/Candidates/perella.html">PERELLA, Jr.</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="b"></div>
+                <div class="personal-choice">
+                    <div class='pc-col-1'>
+                        <p class="pc-line-1">Personal Choice</p>
+                        <p class="pc-line-2">Seleccion Personal</p>
+                    </div>
+                    <div class="pc-col-2">0</div>
+                </div>
+            </div>
+            </div> 
             <div class="end-text">Form 14 - Vineland W6 D-4</div>
         </div>
     </div>
