--- a/child_pages/cc_elections.html
+++ b/child_pages/cc_elections.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/politics-site/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
@@ -13,10 +13,10 @@
     <nav id="nav">
         <header>Inform The Vote</header>
         <ul>
-            <a href="/politics-site/index.html"><li>Home</li></a>
-            <a href="/politics-site/child_pages/cc_elections.html"><li>Cumberland County Elections</li></a>
-            <a href="/politics-site/child_pages/about.html"><li>About</li></a>
-            <a href="/politics-site/child_pages/contact.html"><li>Contact</li></a>
+            <a href="index.html"><li>Home</li></a>
+            <a href="child_pages/cc_elections.html"><li>Cumberland County Elections</li></a>
+            <a href="child_pages/about.html"><li>About</li></a>
+            <a href="child_pages/contact.html"><li>Contact</li></a>
         </ul>
     </nav>
 
@@ -25,8 +25,8 @@
     <div class="container">
         <h2 class="container-title">Cumberland County Elections</h2>
         <div class="container-subh">Top issues this election cycle and the candidates running</div>
-        <a href="/politics-site/child_pages/cc-elections/cc_election_candidates.html">Review the Candidates</a>
-        <a href="/politics-site/child_pages/cc-elections/cc_election_issues.html">Review the Issues</a>
+        <a href="child_pages/cc-elections/cc_election_candidates.html">Review the Candidates</a>
+        <a href="child_pages/cc-elections/cc_election_issues.html">Review the Issues</a>
     </div>
 </body>
 </html>
