--- a/child_pages/cc_elections.html
+++ b/child_pages/cc_elections.html
@@ -13,10 +13,10 @@
     <nav id="nav">
         <header>Inform The Vote</header>
         <ul>
-            <a href="index.html"><li>Home</li></a>
-            <a href="child_pages/cc_elections.html"><li>Cumberland County Elections</li></a>
-            <a href="child_pages/about.html"><li>About</li></a>
-            <a href="child_pages/contact.html"><li>Contact</li></a>
+            <a href="../index.html"><li>Home</li></a>
+            <a href="cc_elections.html"><li>Cumberland County Elections</li></a>
+            <a href="about.html"><li>About</li></a>
+            <a href="contact.html"><li>Contact</li></a>
         </ul>
     </nav>
 
