--- a/child_pages/cc-elections/cc_election_candidates.html
+++ b/child_pages/cc-elections/cc_election_candidates.html
@@ -72,7 +72,7 @@
                             <p>Organization</p>
                         </div>
                         <div class="first-name">
-                            <a href="child_pages/cc-elections/Candidates/laspata.html">Charles R.</a>
+                            <a href="candidates/laspata.html">Charles R.</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>1A</p>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name">
-                            <a href="child_pages/cc-elections/Candidates/laspata.html">LASPATA</a>
+                            <a href="candidates/laspata.html">LASPATA</a>
                         </div>
                     </div>
 
@@ -111,7 +111,7 @@
                             <p>Organization</p>
                         </div>
                         <div class="first-name">
-                            <a href="child_pages/cc-elections/Candidates/white-morris.html">Damita</a>
+                            <a href="Candidates/white-morris.html">Damita</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>2A</p>
@@ -120,7 +120,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name">
-                            <a class="long-name" href="child_pages/cc-elections/Candidates/white-morris.html">WHITE-MORRIS</a>
+                            <a class="long-name" href="Candidates/white-morris.html">WHITE-MORRIS</a>
                         </div>
                     </div>
 
@@ -148,7 +148,7 @@
                             <p>Organization</p>
                         </div>
                         <div class="first-name">
-                            <a href="child_pages/cc-elections/Candidates/bonner.html">Eddie L.</a>
+                            <a href="Candidates/bonner.html">Eddie L.</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>3A</p>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name">
-                            <a href="/politics-site/child_pages/cc-elections/Candidates/bonner.html">BONNER</a>
+                            <a href="Candidates/bonner.html">BONNER</a>
                         </div>
                     </div>
 
@@ -191,7 +191,7 @@
                             <p>Organization</p>
                         </div>
                         <div class="first-name">
-                            <a href="child_pages/cc-elections/Candidates/austino.html">Robert A.</a>
+                            <a href="Candidates/austino.html">Robert A.</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>4A</p>
@@ -200,7 +200,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name">
-                            <a href="child_pages/cc-elections/Candidates/austino.html">AUSTINO</a>
+                            <a href="Candidates/austino.html">AUSTINO</a>
                         </div>
                     </div>
 
@@ -233,7 +233,7 @@
                             <p>Organization</p>
                         </div>
                         <div class="first-name">
-                            <a href="child_pages/cc-elections/Candidates/acevedo.html">Nicasio</a>
+                            <a href="Candidates/acevedo.html">Nicasio</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>5A</p>
@@ -242,7 +242,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name">
-                            <a href="child_pages/cc-elections/Candidates/acevedo.html">ACEVEDO</a>
+                            <a href="Candidates/acevedo.html">ACEVEDO</a>
                         </div>
                     </div>
 
@@ -274,7 +274,7 @@
                             <p>Organization</p>
                         </div>
                         <div class="first-name">
-                            <a href="child_pages/cc-elections/Candidates/capizola.html">John P.</a>
+                            <a href="Candidates/capizola.html">John P.</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>6A</p>
@@ -283,7 +283,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name">
-                            <a class="long-name" id="capizola" href="child_pages/cc-elections/Candidates/capizola.html">CAPIZOLA, Jr.</a>
+                            <a class="long-name" id="capizola" href="Candidates/capizola.html">CAPIZOLA, Jr.</a>
                         </div>
                     </div>
 
@@ -312,7 +312,7 @@
                             <p>Organization</p>
                         </div>
                         <div class="first-name">
-                            <a href="child_pages/cc-elections/Candidates/smith.html">La Rae</a>
+                            <a href="Candidates/smith.html">La Rae</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>7A</p>
@@ -321,7 +321,7 @@
                     </div>
                     <div class="a-row-2">
                         <div id="smith" class="last-name">
-                            <a href="child_pages/cc-elections/Candidates/smith.html">Smith</a>
+                            <a href="Candidates/smith.html">Smith</a>
                         </div>
                     </div>
 
@@ -349,7 +349,7 @@
                             <p>Organization</p>
                         </div>
                         <div class="first-name">
-                            <a id="joseph" href="child_pages/cc-elections/Candidates/perella.html">Joseph "Joeigh" S.</a>
+                            <a id="joseph" href="Candidates/perella.html">Joseph "Joeigh" S.</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>8A</p>
@@ -358,7 +358,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name">
-                            <a href="child_pages/cc-elections/Candidates/perella.html">PERELLA, Jr.</a>
+                            <a href="Candidates/perella.html">PERELLA, Jr.</a>
                         </div>
                     </div>
 
@@ -392,7 +392,7 @@
                             <p>Organization</p>
                         </div>
                         <div class="first-name">
-                            <a id="joseph" href="child_pages/cc-elections/Candidates/perella.html">Joseph "Joeigh" S.</a>
+                            <a id="joseph" href="Candidates/perella.html">Joseph "Joeigh" S.</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>8A</p>
@@ -401,7 +401,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name">
-                            <a href="child_pages/cc-elections/Candidates/perella.html">PERELLA, Jr.</a>
+                            <a href="Candidates/perella.html">PERELLA, Jr.</a>
                         </div>
                     </div>
 
