case sensitivity fix

--- a/child_pages/cc-elections/cc_election_candidates.html
+++ b/child_pages/cc-elections/cc_election_candidates.html
@@ -72,7 +72,7 @@
                             <p>Organization</p>
                         </div>
                         <div class="first-name">
-                            <a href="candidates/laspata.html">Charles R.</a>
+                            <a href="Candidates/laspata.html">Charles R.</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>1A</p>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name">
-                            <a href="candidates/laspata.html">LASPATA</a>
+                            <a href="Candidates/laspata.html">LASPATA</a>
                         </div>
                     </div>
 
