--- a/child_pages/cc-elections/Candidates/luisi.html
+++ b/child_pages/cc-elections/Candidates/luisi.html
@@ -21,6 +21,7 @@
         </nav>
     
         <div id="jumbotronjawn"></div>
+<div class="container">
     <div class="title-info">
        <h2>RUDOLPH 'SKIP' LUISI</h2>
         <div class="running-for">
@@ -35,6 +36,33 @@
     <div class="candidate-pic-box">
         <img class="cover" src="/assets/candidates/luisi.webp" class="candidate-pic">
     </div>
-    
+    <div class="candidate-agenda">
+        <h3 class="sub-heading">agenda</h3>
+            <div class="agenda-thesis">
+
+            </div>
+            <h4 class="sub-heading">party messaging</h4>
+            <div class="agenda-per-party-site">
+                Luisi wants to provide in person meetings again, and expand the Surrogate’s Office to accommodate the different schedules of 
+                residents.  Skip understands what families are experiencing during an emotional and often difficult time from the loss of 
+                a loved one.  He knows that the Surrogate’s office also offers other professional services for adoptions and understands 
+                that too many residents need guidance navigating through governmental regulations.
+            </div>
+            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <div class="policy-positions">
+                Inform The Vote has reached out to this candidate through numerous means and have
+                yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes
+            </div>
+            <h4 class="sub-heading">EXPERIENCE</h4>
+            <div class="experience">
+                In addition to being the owner and manager of the Demarco-Luisi Funeral Home in Vineland for 35 years, 
+                Skip has been a licensed funeral director for 50 years.  He was involved in the West Jersey Funeral 
+                Director Association, his local and civic memberships include being the Founder and Past President of 
+                the Italian American Benevolent Association, a member of the American Legion Post 0270, he is the past 
+                member of the Vineland Housing Authority and was a member on the Vineland Zoning Board. Lifelong resident of 
+                VIneland
+            </div>
+    </div>
+ </div>   
 </body>
 </html>
