--- a/child_pages/cc-elections/Candidates/laspata.html
+++ b/child_pages/cc-elections/Candidates/laspata.html
@@ -21,20 +21,41 @@
         </nav>
     
         <div id="jumbotronjawn"></div>
+<div class="container">
     <div class="title-info">
-       <h2>Charles LaSpata</h2>
+       <h2>RUDOLPH 'SKIP' LUISI</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
-            <div class="position">State Sentator - NJ 1st Legislative District</div>
+            <div class="position">State Senator - 1st Legislative District of NJ</div>
         </div>
         <div class="incum-or-challenger">
             <div class="incumbent inactive">Incumbent</div>
             <div class="challenger active">Challenger</div> 
         </div>
     </div>
-    <div class="cover candidate-pic-box">
-        <img src="/assets/candidates/charles_laspata.jpg" class="candidate-pic">
+    <div class="candidate-pic-box">
+        <img class="cover" src="/assets/candidates/charles_laspata.jpg" class="candidate-pic">
     </div>
-    
+    <div class="candidate-agenda">
+        <h3 class="sub-heading">agenda</h3>
+            <div class="agenda-thesis">
+               Unknown
+            </div>
+            <h4 class="sub-heading">party messaging</h4>
+            <div class="agenda-per-party-site">
+               Unknown
+            </div>
+            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <div class="policy-positions">
+                Inform The Vote has reached out to this candidate through numerous means and have
+                yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes
+                In addition to this, there have been reports that Laspata has been <a href="https://pressofatlanticcity.com/news/local/government-politics/democrat-challenging-testa-is-ghosting-the-campaign/article_7ddd80a0-4341-11ee-920f-7b110cf0a6f1.html" target="_blank" rel="noopener noreferrer">'ghosting' the campaign</a>
+            </div>
+            <h4 class="sub-heading">EXPERIENCE</h4>
+            <div class="experience">
+                Unknown
+            </div>
+    </div>
+ </div>   
 </body>
 </html>
