--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -25,7 +25,7 @@
     <div class="title-info">MICHAEL L. TESTA, Jr.</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
-            <div class="position">Cumberland County Commissioner</div>
+            <div class="position">State Senator - 1st Legislative District of NJ</div>
         </div>
         <div class="incum-or-challenger">
             <div class="incumbent inactive">Incumbent</div>
