--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -21,8 +21,9 @@
         </nav>
     
         <div id="jumbotronjawn"></div>
+<div class="container">
     <div class="title-info">
-       <h2>Damita White-Morris</h2>
+       <h2>DAMITA WHITE-MORRIS</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
             <div class="position">General Assembly - NJ 1st Legislative District</div>
@@ -35,6 +36,29 @@
     <div class="candidate-pic-box">
         <img class="cover" src="/assets/candidates/damita_white_morris.webp" class="candidate-pic">
     </div>
-    
+    <div class="candidate-agenda">
+        <h3 class="sub-heading">agenda</h3>
+            <div class="agenda-thesis">
+                Unknown,
+            </div>
+            <h4 class="sub-heading">party messaging</h4>
+            <div class="agenda-per-party-site">
+                Unknown
+            </div>
+            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <div class="policy-positions">
+                Inform The Vote has reached out to this candidate through numerous means and have
+                yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes.
+            </div>
+            <h4 class="sub-heading">EXPERIENCE</h4>
+            <div class="experience">
+                Fifteen years experience in leadership roles with the Bridgeton School Employees Association, 
+                Cumberland County Council of Education Association, NJEA, and National Education Association.
+                Active member of following professional and community organizations: Juvenile Conference Committee, 
+                Municipal Chair for the City of Bridgeton Democratic Committee, Acting President of NJ Federation of 
+                Democratic Women Cumberland County, and Public Housing Authority.
+            </div>
+    </div>
+ </div>   
 </body>
 </html>
