fleshed out bonner page

--- a/child_pages/cc-elections/Candidates/bonner.html
+++ b/child_pages/cc-elections/Candidates/bonner.html
@@ -21,8 +21,9 @@
         </nav>
     
         <div id="jumbotronjawn"></div>
+<div class="container">
     <div class="title-info">
-       <h2>Eddie L. Bonner</h2>
+       <h2>EDDIE L. BONNER</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
             <div class="position">General Assembly - NJ 1st Legislative District</div>
@@ -35,6 +36,28 @@
     <div class="candidate-pic-box">
         <img class="cover" src="/assets/candidates/eddie_bonner.webp" class="candidate-pic">
     </div>
-    
+    <div class="candidate-agenda">
+        <h3 class="sub-heading">agenda</h3>
+            <div class="agenda-thesis">
+                Unknown
+            </div>
+            <h4 class="sub-heading">party messaging</h4>
+            <div class="agenda-per-party-site">
+                Unknown
+            </div>
+            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <div class="policy-positions">
+                Inform The Vote has reached out to this candidate through numerous means and have
+                yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes.
+            </div>
+            <h4 class="sub-heading">EXPERIENCE</h4>
+            <div class="experience">
+                Has 15 years experience as a police officer. Now he serves as District Manager for KD National Force Security managing security for 
+                Cumberland Regional High School, Hopewell Crest School, in Hopewell, and Cumberland Christian School, in Vineland.
+                His broad experience has given him insights into our most pressing social issues including education, drug addiction, and homelessness.
+            </div>
+    </div>
+ </div>   
 </body>
 </html>
+
