flesh out austino page

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -21,8 +21,9 @@
         </nav>
     
         <div id="jumbotronjawn"></div>
+<div class="container">
     <div class="title-info">
-       <h2>Robert A. Austino</h2>
+       <h2>ROBERT A. AUSTINO</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
             <div class="position">Cumberland County Sheriff</div>
@@ -35,6 +36,29 @@
     <div class="candidate-pic-box">
         <img class="cover" src="/assets/candidates/austino.jpg" class="candidate-pic">
     </div>
-    
+    <div class="candidate-agenda">
+        <h3 class="sub-heading">agenda</h3>
+            <div class="agenda-thesis">
+                Unknown
+            </div>
+            <h4 class="sub-heading">party messaging</h4>
+            <div class="agenda-per-party-site">
+                Unknown
+            </div>
+            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <div class="policy-positions">
+                Inform The Vote was able to speak with Austino at Deerfield Day. Stated he helped develop policies over the years but did not go into detail on such policies.
+                Was catalyst in Vineland Police Department becoming first accredited department in the state of NJ. Wants to develop community outreach project for youth and seniors.
+            </div>
+            <h4 class="sub-heading">EXPERIENCE</h4>
+            <div class="experience">
+                Sheriff Robert A. Austino brings over 30 years of law enforcement experience to the Sheriff’s Office.  He was hired by the Vineland Police Department in April 1973.  He worked his way up the ranks of the Vineland Police Department to the rank of lieutenant.  Sheriff Austino retired from the Vineland Police Department in July of 2003.  He was elected Sheriff of Cumberland County and took office January 1, 2009
+                Sheriff Austino attended Bridgeton High School, Cumberland County College and Glassboro State College.
+
+                Sheriff Austino currently is a member of the International Association of Chief of Police, National Sheriff’s Association, New Jersey Sheriff’s Association, Cumberland County Human Relations Commission and Cumberland County Youth Services Advisory Council.  He is also an advisor for the Cumberland County VoTech Center.  He is past president of the Fraternal Order of Police, Cumberland Lodge #8 and president of the Vineland Superior Officers Association
+            </div>
+    </div>
+ </div>   
 </body>
 </html>
+
