--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -21,8 +21,9 @@
         </nav>
     
         <div id="jumbotronjawn"></div>
+<div class="container">
     <div class="title-info">
-       <h2>La Rae Smith</h2>
+       <h2>LA RAE SMITH</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
             <div class="position">Cumberland County Commissioner</div>
@@ -35,6 +36,36 @@
     <div class="candidate-pic-box">
         <img class="cover" src="/assets/candidates/smith.jpg" class="candidate-pic">
     </div>
-    
+    <div class="candidate-agenda">
+        <h3 class="sub-heading">agenda</h3>
+            <div class="agenda-thesis">
+                Unknown
+            </div>
+            <h4 class="sub-heading">party messaging</h4>
+            <div class="agenda-per-party-site">
+                Support Senior housing and Healthcare Services.
+                Provide county recreational advancements, building a county indoor sports facility and swim center and improving county recreation areas.
+                Support state of the art correctional facility, by improving conditions and programs and drive long standing issues with facility to closure. Also wishes to reduce cost and tax burden of facility.
+            </div>
+            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <div class="policy-positions">
+                Inform The Vote has reached out to this candidate through numerous means and have
+                yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes.
+            </div>
+            <h4 class="sub-heading">EXPERIENCE</h4>
+            <div class="experience">
+                Since 2007, La Rae has worked in education with the Commercial Township Board of Education.  She is currently a Social Service Coordinator 
+                for the United Methodist Communities in Ocean City, New Jersey. With her vast background in Economic Development, Community Education, and 
+                Business, La Rae successfully completed a Certificate of Achievement from Atlantic Cape Community College’s Self-Employment Assistance Program in January 2006. 
+
+                She has been recognized by the First District New Jersey Congress of the United States House of Representatives and Cumberland County Democratic Women receiving 
+                the Outstanding Women of Cumberland County Certificate of Commendation presented by Cumberland County Commissioners.  She is Chair of the Land Use Board in Commercial 
+                Township, Chair of the Democratic Party for Commercial Township, and serves as an elected official of the Commercial Township Board of Education. Her volunteer work in 
+                recreational leagues, faith-based activities, and community service speaks volumes to her compassion and integrity. She serves as a champion to the voices of people in 
+                this great community that she loves.
+            </div>
+    </div>
+ </div>   
 </body>
 </html>
+
