candidate pages all now have info

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -21,8 +21,9 @@
         </nav>
     
         <div id="jumbotronjawn"></div>
+<div class="container">
     <div class="title-info">
-       <h2>Dr. Joeigh Perella</h2>
+       <h2>Joeigh S. Perella Jr.</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
             <div class="position">Cumberland County Commissioner & County Committee</div>
@@ -35,6 +36,42 @@
     <div class="candidate-pic-box">
         <img class="cover" src="/assets/candidates/perella.jpg" class="candidate-pic">
     </div>
-    
+    <div class="candidate-agenda">
+        <h3 class="sub-heading">agenda</h3>
+            <div class="agenda-thesis">
+                Unknown
+            </div>
+            <h4 class="sub-heading">party messaging</h4>
+            <div class="agenda-per-party-site">
+                Invest in the Bayshore Economy
+                Increase access to public water and sewage
+                Develop more afforable housing and new home construction
+                Protect the environment
+                Expand broadband internet access.
+            </div>
+            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <div class="policy-positions">
+                Inform the Vote spoke with Perella at Deerfield Day. Seems to be very focused on public water and sewage issues in county.  
+                The cost of getting sewage and water up to code for residences and businesses is so high currently that it is preventing new business investment 
+                and the sale of residences.  Perella is suggesting applying for federal grants to expand water and sewage.  It is the opinion of Inform the Vote that
+                this candidate is one of the only candidates in this year's election to clearly explain their action plan for implementing their agenda. Spoke at Deerfield Day and multiple Middle
+                Mile Committee Meetings, in regards to their agenda to expand broadand internet access. Believes that in the year 2023 internet access is integral to the community.
+                While acknowledging that the Middle Mile will not connect the end user, she believes it is an essential first step in the process and proper oversight will be conducted.
+                Also mentioned their commitment to bringing awareness to mental illness, depression, and suicide.  Her implementation plan is to get more social workers and counselors into county schools.
+            </div>
+            <h4 class="sub-heading">EXPERIENCE</h4>
+            <div class="experience">
+               Works as a dentist. When she isn’t treating patients Joeigh can be found spending time on 
+               the many community service and volunteer organizations she is involved with. Since 2019 she 
+               has been a member of the Tri-County Rotary and has participated in many of the community 
+               service events; including Loads of Love, a project started by the club to help community 
+               members afford their cost of doing laundry. She also worked with the club to put on a small 
+               free dental clinic in 2021. For these efforts she was recognized by the Regional Rotarian 
+               Governor in 2021. The following year Joeigh was awarded the Business Professional Award at 
+               the Millville Chamber of Commerce Pride of Millville event.
+            </div>
+    </div>
+ </div>   
 </body>
 </html>
+
