--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -61,8 +61,7 @@
                 She has been recognized by the First District New Jersey Congress of the United States House of Representatives and Cumberland County Democratic Women receiving 
                 the Outstanding Women of Cumberland County Certificate of Commendation presented by Cumberland County Commissioners.  She is Chair of the Land Use Board in Commercial 
                 Township, Chair of the Democratic Party for Commercial Township, and serves as an elected official of the Commercial Township Board of Education. Her volunteer work in 
-                recreational leagues, faith-based activities, and community service speaks volumes to her compassion and integrity. She serves as a champion to the voices of people in 
-                this great community that she loves.
+                recreational leagues, faith-based activities, and community service speaks volumes to her compassion and integrity. She serves as a champion to the voices of people in this great community that she loves.
             </div>
     </div>
  </div>   
