styling of homepage

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <div id="jumbotronjawn"></div>
     <div class="container">
-        <div class="logo"></div>
+        <div class="logo">
+            <img src="/assets/INFORM THE.jpg" alt="inform the vote logo" class="logo-img">
+        </div>
         <div class="container-subh">
             <p>Clear, up to date information on candidates running for election relevant to Cumberland County NJ citizens and where they stand on the issues at hand.</a>
             <p>All information gathered by independent citizens of Cumberland County.</p>
@@ -44,7 +46,7 @@
         <h4 class="ss-heading">Site Sections</h4>
         <div class="ss-content">
             <ol class="ss-ol">
-                <li class="ss-li"><strong>The Election:</strong> Navigate an interactive primary ballot that provides concise but
+                <li class="ss-li"><strong><a href="child_pages/cc_elections.html">The Election:</a></strong> Navigate an interactive primary ballot that provides concise but
                     comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
                     policy positions into an easily understandable format.</li>
                 <li class="ss-li"><strong>The Issues:</strong> Cut through the clutter by exploring major community issues presented in a
@@ -52,11 +54,12 @@
                 <li class="ss-li"><strong>Get Involved:</strong> Don&#39;t just be a spectator—be an actor in the democratic process. Our
                     consolidated calendar guides you to meaningful opportunities for community and
                     political engagement.</li>
-                <li class="ss-li"><strong>Our Process:</strong> Understand the meticulous steps we&#39;ve taken to bring you this resource.
+                <li class="ss-li"><strong><a href="child_pages/about.html">Our Process:</a></strong> Understand the meticulous steps we&#39;ve taken to bring you this resource.
                     Our journey to advocate for improved community engagement, transparency, and
                     accountability has been long but is a shared responsibility—one that should be easier to
                     undertake, but often isn&#39;t.</li>
             </ol>
+            <img src="/assets/line-break.webp" alt="a line break" class="line-break">
             <div class="ss-closing-remarks">
                 <p>
                     By transforming intricate political landscapes into accessible insights, we aim to turn
