images not rendering on github pages, but do in live server

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="jumbotronjawn"></div>
     <div class="container">
         <div class="logo">
-            <img src="/assets/INFORM THE.jpg" alt="inform the vote logo" class="logo-img">
+            <img src="assets/INFORM THE.jpg" alt="inform the vote logo" class="logo-img">
         </div>
         <div class="container-subh">
             <p>Clear, up to date information on candidates running for election relevant to Cumberland County NJ citizens and where they stand on the issues at hand.</a>
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-            <img src="/assets/line-break.webp" alt="a line break" class="line-break">
+            <img src="assets/line-break.webp" alt="a line break" class="line-break">
             <div class="ss-closing-remarks">
                 <p>
                     By transforming intricate political landscapes into accessible insights, we aim to turn
