lots of updates

--- a/child_pages/cc-elections/cc_election_candidates.html
+++ b/child_pages/cc-elections/cc_election_candidates.html
@@ -18,6 +18,8 @@
         <ul>
             <a href="../../index.html"><li>Home</li></a>
             <a href="../cc_elections.html"><li>Cumberland County Elections</li></a>
+            <a href="../get-involved.html"><li>Get Involved</li></a>
+            <a href="../events.html"><li>Events</li></a>
             <a href="../about.html"><li>About</li></a>
             <a href="../contact.html"><li>Contact</li></a>
         </ul>
