--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <ul>
             <a href="index.html"><li>Home</li></a>
             <a href="child_pages/cc_elections.html"><li>Cumberland County Elections</li></a>
+            <a href="child_pages/get-involved.html"><li>Get Involved</li></a>
+            <a href="child_pages/events.html"><li>Events</li></a>
             <a href="child_pages/about.html"><li>About</li></a>
             <a href="child_pages/contact.html"><li>Contact</li></a>
         </ul>
@@ -50,9 +52,9 @@
                     <li class="ss-li"><strong><a href="child_pages/cc_elections.html">The Election:</a></strong> Navigate an interactive primary ballot that provides concise but
                         comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
                         policy positions into an easily understandable format.</li>
-                    <li class="ss-li"><strong>The Issues:</strong> Cut through the clutter by exploring major community issues presented in a
+                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/cc_election_issues.html">The Issues:</a></strong> Cut through the clutter by exploring major community issues presented in a
                         straightforward manner, allowing you to quickly gauge where each candidate stands.</li>
-                    <li class="ss-li"><strong>Get Involved:</strong> Don&#39;t just be a spectator—be an actor in the democratic process. Our
+                    <li class="ss-li"><strong><a href="child_pages/get-involved.html">Get Involved:</a></strong> Don&#39;t just be a spectator—be an actor in the democratic process. Our
                         consolidated calendar guides you to meaningful opportunities for community and
                         political engagement.</li>
                     <li class="ss-li"><strong><a href="child_pages/about.html">Our Process:</a></strong> Understand the meticulous steps we&#39;ve taken to bring you this resource.
