--- a/child_pages/about.html
+++ b/child_pages/about.html
@@ -14,9 +14,11 @@
         <header>Inform The Vote</header>
         <ul>
             <a href="../index.html"><li>Home</li></a>
-            <a href="/child_pages/cc_elections.html"><li>Cumberland County Elections</li></a>
-            <a href="/child_pages/about.html"><li>About</li></a>
-            <a href="/child_pages/contact.html"><li>Contact</li></a>
+            <a href="cc_elections.html"><li>Cumberland County Elections</li></a>
+            <a href="get-involved.html"><li>Get Involved</li></a>
+            <a href="events.html"><li>Events</li></a>
+            <a href="about.html"><li>About</li></a>
+            <a href="contact.html"><li>Contact</li></a>
         </ul>
     </nav>
 
