--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="../../style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <title>Inform The Vote</title>
 </head>
 <body>
+    <nav id="nav">
+        <header>Inform The Vote</header>
+        <ul>
+            <a href="../../index.html"><li>Home</li></a>
+            <a href="../cc_elections.html"><li>Cumberland County Elections</li></a>
+            <a href="../get-involved.html"><li>Get Involved</li></a>
+            <a href="../events.html"><li>Events</li></a>
+            <a href="../about.html"><li>About</li></a>
+            <a href="../contact.html"><li>Contact</li></a>
+        </ul>
+    </nav>
+
+    <div id="jumbotronjawn"></div>
+
     
 </body>
 </html>
