--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -24,14 +24,15 @@
     
         <div id="jumbotronjawn"></div>
 <div class="container">
-    <div class="title-info">MICHAEL L. TESTA, Jr.</h2>
+    <div class="title-info">
+        <h2>MICHAEL L. TESTA, Jr.</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
             <div class="position">State Senator - 1st Legislative District of NJ</div>
         </div>
         <div class="incum-or-challenger">
-            <div class="incumbent inactive">Incumbent</div>
-            <div class="challenger active">Challenger</div> 
+            <div class="incumbent active">Incumbent</div>
+            <div class="challenger inactive">Challenger</div> 
         </div>
     </div>
     <div class="candidate-pic-box">
