--- a/child_pages/cc-elections/Candidates/sauro.html
+++ b/child_pages/cc-elections/Candidates/sauro.html
@@ -24,7 +24,8 @@
     
         <div id="jumbotronjawn"></div>
 <div class="container">
-    <div class="title-info">JAMES SAURO</h2>
+    <div class="title-info">
+        <h2>JAMES SAURO</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
             <div class="position">Cumberland County Commissioner</div>
